--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -51,3 +51,8 @@ table {
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
+
+sup {
+	font-size: smaller;
+	vertical-align: super;
+}
